# tushare-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md
docs/: THIRD_PARTY_TYPES.md
examples/: basic_usage.rs  custom_date_format_example.rs  custom_type_example.rs  date_format_attribute_example.rs  debug_custom_type.rs  env_usage.rs  generic_api_usage.rs  generic_pagination_example.rs  logging_example.rs  macro_conversion_example.rs  pagination_example.rs  proc_macro_example.rs  simple_derive_test.rs  simple_proc_macro_demo.rs  simple_stock_conversion.rs  stock_conversion_example.rs  stock_conversion_guide.md  third_party_types_example.rs  tracing_example.rs
src/: api.rs  basic_types.rs  client.rs  client_ex.rs  custom_date_format.rs  error.rs  lib.rs  logging.rs  third_party_types.rs  traits.rs  types.rs  utils.rs
tushare-derive/: Cargo.toml
tushare-derive/src/: lib.rs
