[package]
name = "tushare-api"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "A comprehensive Rust client library for accessing Tushare financial data APIs"
repository = "https://github.com/rock117/tushare-api"
homepage = "https://github.com/rock117/tushare-api"
documentation = "https://docs.rs/tushare-api"
keywords = ["tushare", "finance", "api", "stock", "data"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["rock huang <manj22@163.com>"]

[lib]
name = "tushare_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-log = { version = "0.2", optional = true }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
