[package]
name = "tushare-api"
version = "1.2.7"
edition = "2024"
license = "MIT"
description = "A comprehensive Rust client library for accessing Tushare financial data APIs"
repository = "https://github.com/rock117/tushare-api"
homepage = "https://github.com/rock117/tushare-api"
documentation = "https://docs.rs/tushare-api"
keywords = ["tushare", "finance", "api", "stock", "data"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["rock huang <manj22@163.com>"]

[lib]
name = "tushare_api"
path = "src/lib.rs"

[workspace]
members = [".", "tushare-derive"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
tushare-derive = { path = "tushare-derive", version = "1.1.0" }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-log = { version = "0.2", optional = true }

# Optional third-party type support
rust_decimal = { version = "1.0", optional = true }
bigdecimal = { version = "0.4", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
uuid = { version = "1.0", optional = true, features = ["v4", "serde"] }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-log"]

# Third-party type support features
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]

# Convenience feature for all third-party types
all_types = ["rust_decimal", "bigdecimal", "chrono", "uuid"]
